syntax = "proto3";
package DomainServices.CustomerService;
option csharp_namespace = "DomainServices.CustomerService.Contracts";

import "Identity.proto";
import "Messages/Customer.proto";

message CustomerListRequest {
    repeated cis.types.Identity Identities = 1;
}

message CustomerListResponse {
	repeated Customer Customers = 1;
}